fix(staking): fix popupView spacing of vertical marker

--- a/packages/staking/src/features/overview/staking-info-card/StakePoolInfo.module.scss
+++ b/packages/staking/src/features/overview/staking-info-card/StakePoolInfo.module.scss
@@ -14,6 +14,7 @@
   height: size_unit(8);
   padding: size_unit(1);
   max-width: 100%;
+  margin-left: 16px;
   &:hover {
     background: var(--light-mode-light-grey);
   }
